--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,9 @@
         after:hover:scale-x-100 after:transition after:duration-300 after:origin-center
     }
 
+    .active{
+        @apply text-yellow-400 font-bold
+    }
     .heading{
         @apply text-center text-white text-[28px] sm:text-[33px] md:text-[45px] font-bold uppercase
     }
@@ -50,23 +53,24 @@
         @apply transform cursor-pointer hover:translate-y-6 transition-all duration-200 relative w-[100%] h-[200px] md:h-[300px]
     }
     
-    .footer-container{
-        @apply grid border-b-[1px] pb-[6rem] border-gray-400 grid-cols-1 lg:grid-cols-3 md:grid-cols-2 w-[80%] mx-auto gap-[3rem]
+    .contact-container{
+        @apply grid border-b-[1px] pb-[4rem] border-gray-400 grid-cols-1 md:grid-cols-2 w-[80%] mx-auto gap-[3rem]
     }
     
-    .footer-icon-container{
-        @apply md:w-[6.5rem] md:h-[6.5rem] w-[5rem] h-[5rem] flex items-center justify-center rounded-full bg-[#55e6a5]
+    .contact-icon-container{
+        @apply md:w-[3rem] md:h-[3rem] w-[2.5rem] h-[2.5rem] flex items-center justify-center rounded-full bg-[#55e6a5]
     }
 
-    .footer-icon{
-        @apply md:w-[4rem] md:h-[4rem] w-[3.5rem] h-[3.5rem] text-black
+    .contact-icon{
+        @apply md:w-[2rem] md:h-[2rem] w-[1.5rem] h-[1.5rem] text-black
     }
 
-    .footer-item-heading{
+    .contact-item-heading{
         @apply text-[25px] mb-[0.2rem] font-semibold text-white
     }
 
-    .footer-item-text{
+    .contact-item-text{
         @apply text-[17px] w-[90%] text-white opacity-60
     }
+
 }
