--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@
     }
 
     .expertise-text{
-        @apply mx-[2rem] md:mx-[5.5rem] text-[#ffffff92] text-[12px] md:text-[14px] font-semibold text-nowrap
+        @apply mx-[2rem] md:mx-[2rem] text-[#ffffff92] text-[12px] md:text-[14px] font-semibold text-nowrap
     }
 
     .technology-container{
@@ -50,8 +50,17 @@
     }
 
     .project-div{
-        @apply transform cursor-pointer hover:translate-y-6 transition-all duration-200 relative w-[100%] h-[200px] md:h-[300px]
+        @apply p-2 border-[1.5rem] hover:border-yellow-400
     }
+
+    .project-div-effect{
+        @apply transform cursor-pointer hover:translate-y-6 transition-all duration-200
+    }
+    
+/* 
+    .project-photo{
+        @apply h-[100%] w-[100%]
+    } */
     
     .contact-container{
         @apply grid border-b-[1px] pb-[4rem] border-gray-400 grid-cols-1 md:grid-cols-2 w-[80%] mx-auto gap-[3rem]
@@ -73,4 +82,31 @@
         @apply text-[17px] w-[90%] text-white opacity-60
     }
 
+
+    /* App.css or your main CSS file */
+    .scroll-to-top {
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        z-index: 1000;
+    }
+  
+    .scroll-to-top-button {
+        padding: 10px 15px;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: opacity 0.4s, background-color 0.3s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        @apply bg-yellow-400 text-black text-[40px] font-bold
+    }
+  
+    .scroll-to-top-button:hover {
+        @apply bg-white text-yellow-400
+    }
+  
 }
